Fix overflowing label on sidebar

--- a/src/app.styl
+++ b/src/app.styl
@@ -111,7 +111,7 @@ a
       position: fixed
       right: 60px
       text-align: right
-      width: 200px
+      width: 100px
       pointer-events: none
       margin-left: 8px
       opacity: 0
@@ -348,3 +348,4 @@ input
         left: 50%
         transform: translateX(-50%)
         text-align: center
+        width: 200px
